--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -38,7 +38,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form action="/signin" method="POST">
+  <form action="/" method="POST">
     <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
     <div class="form-floating">
@@ -49,8 +49,8 @@
       <input type="password" name="password" class="form-control" id="floatingPassword" placeholder="Password">
       <label for="floatingPassword">Password</label>
     </div>
-
-    
+  
+    <a href="{{ url_for('main.signup') }}">Sign Up</a>
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
    
   </form>
