--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -38,7 +38,7 @@
   <body class="text-center">
     
 <main class="form-signin">
-  <form action="/signUp" method="POST">
+  <form action="{{ url_for('main.signup') }}" method="POST">
     <h1 class="h3 mb-3 fw-normal">Sign Up</h1>
     <div class="form-floating">
         <input type="text" name="fname" class="form-control" id="floatingInput" placeholder="First name">
@@ -72,6 +72,7 @@
         <label for="floatingInput">Company Size</label>
     </div>
 
+    <a href="{{ url_for('main.login') }}">login</a>
     
     <button class="w-100 btn btn-lg btn-primary" type="submit">Sign up</button>
     
